--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" multiple>
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -247,7 +247,7 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-<script src="js/load.js"></script>
+<script src="js/xhr.js"></script>
 <script src="js/util.js"></script>
 <script src="js/data.js"></script>
 <script src="js/main-pin.js"></script>
